kube/perfect-shot-web-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: perfect-shot-web
  namespace: default
spec:
  ports:
    - port: 199
      targetPort: 80
  selector:
    service: perfect-shot-web
  type: NodePort
