kube/perfect-shot-web-ingress-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: perfect-shot-web-ingress
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - perfectshot.io
      secretName: perfect-shot-web-tls
  defaultBackend:
    service:
      name: perfect-shot-web
      port:
        number: 199
  rules:
    - host: perfectshot.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: perfect-shot-web
                port:
                  number: 199
